
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package ClipperMom;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/ClipperMom";

message SetOwner {
	google.protobuf.Timestamp ts = 1;
	bytes OldOwner = 2;		//	address
	bytes NewOwner = 3;		//	address
}

message SetAuthority {
	google.protobuf.Timestamp ts = 1;
	bytes OldAuthority = 2;		//	address
	bytes NewAuthority = 3;		//	address
}

message SetBreaker {
	google.protobuf.Timestamp ts = 1;
	bytes Clip = 2;		//	address
	bytes Level = 3;		//	uint256
}
